--- a/Config/Mycommand/config.yml
+++ b/Config/Mycommand/config.yml
@@ -62,7 +62,7 @@ ECONOMY:
   SUFFIX: "$"
 SCHEDULER:
   ENABLED: false
-  DATE_FORMAT: "d M yyyy"
+  DATE_FORMAT: "yyyy M d"
   FIRST_CHECK_AFTER_SEC: 60
   LAUNCH_CHECK_ON_EVERY_N_MIN: 60
 SIGNS:
